# libmy

./: .gitignore  CMakeLists.txt  Makefile
include/: get_next_line.h  my_printf.h
include/libmy/: my.h
src/: get_next_line.c  my_count_word.c  my_count_word_c.c  my_cut_str_after_char.c  my_epur_str.c  my_fusion.c  my_get_next_word.c  my_get_str_from_nbr.c  my_getenv.c  my_getnbr.c  my_getnbr_base.c  my_is_alnum.c  my_is_printable.c  my_nbr_len.c  my_nbr_to_binary.c  my_power.c  my_put_nbr.c  my_put_nbr_base.c  my_put_unsigned_nbr.c  my_putchar.c  my_putstr.c  my_rev_str.c  my_sort_int_tab.c  my_square_root.c  my_str_capitalize.c  my_str_cmp.c  my_str_is_alpha.c  my_str_is_alpha_num.c  my_str_is_in_tab.c  my_str_is_lower.c  my_str_is_num.c  my_str_is_printable.c  my_str_is_upper.c  my_str_lower_case.c  my_str_str.c  my_str_to_wordtab.c  my_str_to_wordtab_c.c  my_str_upper_case.c  my_strcat.c  my_strcmp.c  (+15 more)
src/getters/: get_next_line.c  my_get_next_word.c  my_get_position_in_base.c  my_get_str_from_nbr.c  my_getenv.c  my_getnbr.c  my_getnbr_base.c
src/is/: my_is_alnum.c  my_is_printable.c  my_str_is_alnum.c  my_str_is_alpha.c  my_str_is_in_tab.c  my_str_is_lower.c  my_str_is_num.c  my_str_is_printable.c  my_str_is_upper.c
src/my_printf/: chars_functions.c  my_printf.c  number1_functions.c  number2_functions.c
src/nbr/: my_nbr_to_binary.c  my_nbrlen.c  my_power.c  my_square_root.c  my_swap_int.c
src/put/: my_put_nbr_base.c  my_put_unsigned_nbr.c  my_putchar.c  my_putnbr.c  my_putstr.c
src/str/: my_count_word.c  my_count_word_c.c  my_fusion.c  (+18 more)
tests/: Makefile
(+19 files in other folders)
